syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.orca3.miniAutoML";
option java_outer_classname = "DataManagementProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package data_management;

service DataManagementService {
  rpc ListDatasetCommits (DatasetPointer) returns (DatasetSummary);
  rpc ListDatasets (DatasetFilter) returns (stream DatasetPointer);
  rpc CreateDataset (CreateDatasetRequest) returns (DatasetVersionPointer);
  rpc UpdateDataset (CreateCommitRequest) returns (DatasetVersionPointer);
  rpc RollbackDataset (DatasetVersionPointer) returns (DatasetVersionPointer);
  rpc FetchLatestDataset (DatasetPointer) returns (DatasetDetails);
  rpc FetchVersionedDataset (DatasetVersionPointer) returns (DatasetDetails);
  rpc DeleteDataset (DatasetPointer) returns (google.protobuf.Empty);
}

message CreateDatasetRequest {
  string name = 1;
  string description = 2;
  string dataset_type = 3;
  string uri = 4;
}

message DatasetFilter {
  string dataset_type = 1;
}

message CreateCommitRequest {
  DatasetVersionPointer parent = 1;
  string commit_message = 2;
  CommitType commit_type = 3;
  string uri = 4;
}

message DatasetVersionPointer {
  string dataset_id = 1;
  string commit_id = 2;
}

message DatasetPointer {
  string dataset_id = 1;
}

message DatasetSummary {
  string datasetId = 1;
  string name = 2;
  string description = 3;
  string dataset_type = 4;
  google.protobuf.Timestamp last_updated_at = 5;
  repeated CommitInfo commits = 6;

}

message DatasetDetails {
  DatasetPointer pointer = 1;
  string name = 2;
  string description = 3;
  string dataset_type = 4;
  google.protobuf.Timestamp last_updated_at = 5;
  repeated DatasetPart parts = 6;
}

message DatasetPart {
  DatasetPointer pointer = 1;
  string uri = 2;
}

message CommitInfo {
  DatasetPointer pointer = 1;
  google.protobuf.Timestamp created_at = 2;
}

enum CommitType {
  OVERWRITE = 0;
  APPEND = 1;
}
